Yaml/code-base/was-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: was-dep
  labels:
    app: was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      serviceAccountName: storage-sa
      containers:
      - name: was
        image: jjy4041/ssgpang:0843cdf286d750f17053227d22b9e5d7ad049983
        # image: jjy4041/ssgpang:35a0ea78de3c0e2808ceff7701eea8fb400a2402
        ports:
        - containerPort: 80
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
